; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/bsnmptools/extr_bsnmpget.c_parse_int.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/bsnmptools/extr_bsnmpget.c_parse_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snmp_value = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [23 x i8] c"Value %s not supported\00", align 1
@SNMP_SYNTAX_INTEGER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snmp_value*, i8*)* @parse_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_int(%struct.snmp_value* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snmp_value*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.snmp_value* %0, %struct.snmp_value** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i64, i64* @errno, align 8
  %10 = trunc i64 %9 to i32
  store i32 %10, i32* %8, align 4
  store i64 0, i64* @errno, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @strtol(i8* %11, i8** %6, i32 10)
  store i32 %12, i32* %7, align 4
  %13 = load i64, i64* @errno, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @warn(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = load i32, i32* %8, align 4
  %19 = sext i32 %18 to i64
  store i64 %19, i64* @errno, align 8
  store i32 -1, i32* %3, align 4
  br label %30

20:                                               ; preds = %2
  %21 = load i32, i32* @SNMP_SYNTAX_INTEGER, align 4
  %22 = load %struct.snmp_value*, %struct.snmp_value** %4, align 8
  %23 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load %struct.snmp_value*, %struct.snmp_value** %4, align 8
  %26 = getelementptr inbounds %struct.snmp_value, %struct.snmp_value* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32 %24, i32* %27, align 4
  %28 = load i32, i32* %8, align 4
  %29 = sext i32 %28 to i64
  store i64 %29, i64* @errno, align 8
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %20, %15
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @warn(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
